// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ============================================
// Enum Definitions
// ============================================

enum StudyPlanStatus {
  draft
  active
  archived
}

enum ConceptSource {
  ai_generated
  manual
  imported
}

enum ConceptStatus {
  active
  deprecated
}

enum AnalysisJobStatus {
  pending
  processing
  done
  failed
}

/// Sub-step within a `processing` AnalysisJob (Issue #186, SP-06 mockup's 4-phase progress).
/// The mockup's first phase ("tải tệp lên kho lưu trữ") is already done by the time a job
/// exists at all — the Document is created in the same transaction as the job — so it has
/// no value here; these three cover what actually happens inside `processAnalysisJob`.
enum AnalysisJobPhase {
  sending_to_ai
  extracting
  validating
}

// --- Sprint 4: AI Examiner + Focus + Review Queue (I6.1 / #113) ---

enum InterviewSessionStatus {
  active
  paused
  completed
  abandoned
}

enum TurnVerdict {
  deep
  shallow
  wrong
}

enum QuestionType {
  recall
  application
  why
}

enum TurnSource {
  ai
  cache_fallback
}

enum FocusSessionStatus {
  running
  completed
  cancelled
}

enum ReviewReason {
  traceback
  spaced_repetition
  deadline_priority
  manual
}

/// Trạng thái của một mục trong hàng đợi ôn — ngữ nghĩa chốt lại ngày 04/08/2026 (#224).
/// Truy ngược **áp thẳng** khái niệm nền vào lịch ngay khi chấm xong; không còn cổng xác nhận,
/// nên các nhãn dưới đây mô tả *mục đang ở đâu trên lịch*, không phải *ai đã duyệt nó*.
///
/// - `pending`  — ĐÃ ÁP VÀO LỊCH. Trạng thái bình thường của một mục đang có hiệu lực, không
///                chờ ai duyệt. Tên gọi lệch nghĩa nhưng giữ nguyên trong Sprint 4: đổi giá trị
///                enum kéo theo migration phá huỷ và chạm mọi chỗ đọc (nợ kỹ thuật ghi ở #220).
/// - `accepted` — ⛔ NGỪNG DÙNG (deprecated 04/08/2026). Di tích của mô hình cũ "sinh viên bấm
///                Đồng ý ôn lại". Không code path nào ghi giá trị này nữa; dữ liệu cũ đã được
///                backfill về `pending` (migration `..._review_item_status_applied_by_default`).
///                Nhãn vẫn nằm trong enum vì gỡ một giá trị khỏi enum Postgres là thao tác phá
///                huỷ (phải dựng lại type) — xoá hẳn để Sprint 5.
/// - `skipped`  — NGƯỜI DÙNG ĐÃ GỠ KHỎI LỊCH. Hàng không bị xoá: cái sinh viên chọn bỏ là dữ
///                liệu đáng giữ (ràng buộc gốc #124), và màn Kế hoạch ôn tập (#225) đọc lại
///                nhóm này để đưa mục trở về lịch.
/// - `done`     — chưa dùng, chưa code path nào ghi. Giữ chỗ cho "đã ôn xong mục này".
enum ReviewItemStatus {
  pending
  accepted
  skipped
  done
}

// --- Source-document anchors (FS-04 trích đoạn, AE-02 citation, kiểm chứng C5) ---

enum DocumentKind {
  pdf
  image
  text
}

// --- Sprint 5: Interview v2 — AI phát bằng chứng, code chấm (#330) ---

/// Hai trạng thái DUY NHẤT model được phát cho một điểm-kiểm (§2.1).
///
/// `not_discussed` **cố ý không có mặt ở đây**: nó là phép suy tất định lúc đóng khái niệm
/// (`checkpoint đã chốt − checkpoint có evidence`), không phải thứ model khai. Bớt một mẩu
/// phán xét khỏi AI, thêm một mẩu cho code — đúng hướng C4.
///
/// Giá trị ngoài enum (spike S0 đo được `"Running"` dưới async-lag) KHÔNG tới được cột này:
/// `sanitizeEvidence` drop trước khi có lệnh ghi nào chạy.
enum EvidenceStatus {
  covered
  contradicted
}

// ============================================
// Model Definitions
// ============================================

/// Tài khoản người dùng (sinh viên)
model User {
  id             String   @id @default(uuid()) @db.Uuid
  email          String   @unique @db.VarChar(255)
  passwordHash   String   @map("password_hash") @db.VarChar(255)
  name           String?  @db.VarChar(100)
  pomodoroConfig Json     @default("{\"work\":25,\"short_break\":5,\"long_break\":15,\"cycles\":4,\"sound\":true}") @map("pomodoro_config")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  studyPlans        StudyPlan[]
  interviewSessions InterviewSession[]
  focusSessions     FocusSession[]

  @@map("users")
}

/// Kế hoạch ôn tập - chứa DAG các khái niệm
model StudyPlan {
  id               String          @id @default(uuid()) @db.Uuid
  userId           String          @map("user_id") @db.Uuid
  name             String          @db.VarChar(255)
  deadline         DateTime?
  status           StudyPlanStatus @default(active)
  dagAutoFixed     Boolean         @default(false) @map("dag_auto_fixed")
  tracebackEnabled Boolean         @default(true) @map("traceback_enabled")
  /// Ngôn ngữ tài liệu do extract_concepts phát hiện -- AI Examiner dùng để sinh câu hỏi/feedback đúng ngôn ngữ
  languageDetected String?         @map("language_detected") @db.VarChar(20)
  createdAt        DateTime        @default(now()) @map("created_at")
  updatedAt        DateTime        @updatedAt @map("updated_at")

  user              User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  concepts          Concept[]
  conceptEdges      ConceptEdge[]
  interviewSessions InterviewSession[]
  focusSessions     FocusSession[]
  reviewQueueItems  ReviewQueueItem[]
  documents         Document[]

  @@index([userId])
  @@map("study_plans")
}

/// Khái niệm trong đồ thị kiến thức
/// Lưu ý: difficulty range [1-5], mastery_score range [0.0-1.0] -- enforce tại application layer (Zod)
model Concept {
  id           String        @id @default(uuid()) @db.Uuid
  planId       String        @map("plan_id") @db.Uuid
  name         String        @db.VarChar(255)
  difficulty   Int?          @default(1)
  masteryScore Float?        @map("mastery_score")
  lastTestedAt DateTime?     @map("last_tested_at")
  source       ConceptSource @default(ai_generated)
  status       ConceptStatus @default(active)
  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @updatedAt @map("updated_at")

  plan              StudyPlan           @relation(fields: [planId], references: [id], onDelete: Cascade)
  edgesFrom         ConceptEdge[]       @relation("EdgeFrom")
  edgesTo           ConceptEdge[]       @relation("EdgeTo")
  questionCaches    QuestionCache[]
  interviewTurns    InterviewTurn[]
  reviewQueueItems  ReviewQueueItem[]
  conceptSources    ConceptSourceRef[]
  sessionNotes      SessionNote[]
  checkpoints       ConceptCheckpoint[]
  interviewEvidence InterviewEvidence[]

  @@index([planId])
  @@map("concepts")
}

/// Điểm-kiểm của một khái niệm — thước đo của Interview v2 (#329, INV-1).
///
/// Mỗi hàng là MỘT điều sinh viên phải thể hiện được để coi là nắm khái niệm này. Danh sách
/// được sinh + CHỐT lúc phân tích tài liệu (`extract_concepts`), **bất biến khi chấm**: model
/// dẫn phiên chỉ được phát bằng chứng theo `id` có sẵn ở đây, không được tự chế checkpoint
/// giữa chừng (model tự đúc thước rồi tự đo mình — đúng thứ v2 loại bỏ). Đây là C4 ở tầng vi
/// mô: bên tất định sở hữu cái thước.
///
/// `id` phải **ổn định** qua mỗi lần phân tích lại: bằng chứng phỏng vấn (#330) trỏ vào nó,
/// nên checkpoint trùng nội dung được giữ nguyên hàng thay vì xoá-tạo-lại (`planCheckpointMerge`).
/// Số hàng của một khái niệm chính là `C` trong `coverageMasteryScore` — `C = 0` (khái niệm
/// không có checkpoint) là **đầu ra hợp lệ**, không phải lỗi.
///
/// Không có cột trọng số: checkpoint khó thì lúc trích **đếm thành nhiều dòng hơn**, để công
/// thức chấm giữ đúng một hằng số ở đúng một chỗ (§2.3 interview-voice-architecture.md).
model ConceptCheckpoint {
  id         String   @id @default(uuid()) @db.Uuid
  conceptId  String   @map("concept_id") @db.Uuid
  /// Câu mô tả điểm-kiểm, đã chuẩn hoá khoảng trắng. Ngôn ngữ theo tài liệu của sinh viên.
  text       String   @db.VarChar(300)
  /// Thứ tự trong lần trích gần nhất — chỉ để đọc/hiển thị, không tham gia định danh.
  orderIndex Int      @map("order_index")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  concept Concept @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  @@unique([conceptId, text])
  @@index([conceptId])
  @@map("concept_checkpoints")
}

/// Cạnh trong đồ thị DAG - biểu diễn quan hệ prerequisite
/// Lưu ý: Self-loop (fromConceptId = toConceptId) phải được validate tại application layer
model ConceptEdge {
  id            String @id @default(uuid()) @db.Uuid
  planId        String @map("plan_id") @db.Uuid
  fromConceptId String @map("from_concept_id") @db.Uuid
  toConceptId   String @map("to_concept_id") @db.Uuid

  plan        StudyPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  fromConcept Concept   @relation("EdgeFrom", fields: [fromConceptId], references: [id], onDelete: Cascade)
  toConcept   Concept   @relation("EdgeTo", fields: [toConceptId], references: [id], onDelete: Cascade)

  @@unique([planId, fromConceptId, toConceptId])
  @@index([planId])
  @@index([fromConceptId])
  @@index([toConceptId])
  @@map("concept_edges")
}

/// Job phân tích tài liệu bất đồng bộ (SP-06)
/// Lưu ý: planDraftId không có FK constraint vì plan draft có thể chưa tồn tại (async flow)
model AnalysisJob {
  id           String            @id @default(uuid()) @db.Uuid
  planDraftId  String?           @map("plan_draft_id") @db.Uuid
  fileKey      String?           @map("file_key")
  status       AnalysisJobStatus @default(pending)
  /// Null until the job starts `processing`; not reset on completion or failure — a caller
  /// only reads it while status is `processing` (Issue #186).
  phase        AnalysisJobPhase?
  retryCount   Int               @default(0) @map("retry_count")
  /// Truncated, safe reason for the last `failed` transition (Issue #183) — set only by
  /// `markFailed()`'s real-error path, never by the stale-job sweep or the retry/reanalyze
  /// force-fail paths, which have no underlying error to report.
  errorMessage String?           @map("error_message")
  createdAt    DateTime          @default(now()) @map("created_at")
  completedAt  DateTime?         @map("completed_at")

  @@index([planDraftId])
  @@index([status])
  @@map("analysis_jobs")
}

/// Cache câu hỏi pre-generated cho AI Examiner fallback (AE-05, AE-06)
/// Sprint 3 chỉ tạo bảng, việc populate data sẽ ở Sprint 4
model QuestionCache {
  id           String   @id @default(uuid()) @db.Uuid
  conceptId    String   @map("concept_id") @db.Uuid
  questionText String   @map("question_text")
  questionType String?  @map("question_type") @db.VarChar(50)
  answerHint   String?  @map("answer_hint")
  generatedAt  DateTime @default(now()) @map("generated_at")

  concept Concept @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  @@index([conceptId])
  @@map("question_cache")
}

/// Phiên vấn đáp AI Examiner (AE-01, AE-02, AE-03)
model InterviewSession {
  id                 String                 @id @default(uuid()) @db.Uuid
  userId             String                 @map("user_id") @db.Uuid
  planId             String                 @map("plan_id") @db.Uuid
  status             InterviewSessionStatus @default(active)
  conceptQueue       Json                   @map("concept_queue") // string[] conceptId theo thứ tự ưu tiên
  currentConceptIdx  Int                    @default(0) @map("current_concept_idx")
  maxTurnsPerConcept Int                    @default(3) @map("max_turns_per_concept") // C6
  fallbackMode       Boolean                @default(false) @map("fallback_mode")
  summaryText        String?                @map("summary_text")
  startedAt          DateTime               @default(now()) @map("started_at")
  endedAt            DateTime?              @map("ended_at")
  createdAt          DateTime               @default(now()) @map("created_at")
  updatedAt          DateTime               @updatedAt @map("updated_at")

  user     User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan     StudyPlan           @relation(fields: [planId], references: [id], onDelete: Cascade)
  turns    InterviewTurn[]
  evidence InterviewEvidence[]

  @@index([userId])
  @@index([planId])
  @@index([status])
  @@map("interview_sessions")
}

/// Một lượt hỏi-đáp trong phiên (AE-02)
model InterviewTurn {
  id               String        @id @default(uuid()) @db.Uuid
  sessionId        String        @map("session_id") @db.Uuid
  conceptId        String        @map("concept_id") @db.Uuid
  turnIndex        Int           @map("turn_index") // 1..maxTurnsPerConcept
  questionText     String        @map("question_text")
  questionType     QuestionType? @map("question_type")
  answerText       String?       @map("answer_text")
  score            Float? // 0.0 - 1.0 (enforce ở Zod)
  feedback         String?
  verdict          TurnVerdict?
  source           TurnSource    @default(ai)
  /// Ảnh chụp neo nguồn C5 tại thời điểm hỏi (không FK — chỉ tham chiếu, xoá tài liệu không
  /// được kéo theo lượt phỏng vấn). Suy lại neo lúc đọc sẽ gắn tài liệu *hiện tại* vào câu hỏi
  /// sinh từ tài liệu *cũ* — trích dẫn sai mà không có dấu hiệu nào để phát hiện.
  /// `null` cho lượt có trước migration này, và cho khái niệm không có neo.
  sourceDocumentId String?       @map("source_document_id") @db.Uuid
  sourcePageFrom   Int?          @map("source_page_from")
  sourcePageTo     Int?          @map("source_page_to")
  askedAt          DateTime      @default(now()) @map("asked_at")
  answeredAt       DateTime?     @map("answered_at")

  session InterviewSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  concept Concept          @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // audit A2: idempotency cho POST /answers (I6.3) — double-submit không tạo 2 turn
  @@unique([sessionId, conceptId, turnIndex])
  @@index([sessionId])
  @@index([conceptId])
  @@map("interview_turns")
}

/// Bằng chứng phỏng vấn cho MỘT điểm-kiểm trong MỘT phiên (#330, §2.2 interview-voice-architecture).
///
/// Model phát bằng chứng **per-checkpoint** (`covered | contradicted` + trích lời sinh viên),
/// KHÔNG phát điểm. `masteryScore` trở thành **phép suy tất định** trên bảng này lúc đóng khái
/// niệm (#331) ⇒ không còn một ô điểm bị nhiều lượt tranh nhau ghi, nên lớp lỗi write-race #288
/// biến mất **theo cấu trúc** chứ không nhờ một bản vá. Đường claim per-turn hiện tại vẫn chạy
/// song song cho tới lúc cutover (§7 coexistence) — bảng này chưa có caller ở #330.
///
/// `@@unique([sessionId, conceptId, checkpointId])` là thứ làm ghi nhận **idempotent tự nhiên**:
/// model re-emit sau reconnect/retry chỉ ghi đè đúng ô của nó, không nhân bản. Rớt connection
/// giữa chừng thì bằng chứng đã nằm ở server — mở lại khái niệm là đi tiếp từ những điểm-kiểm
/// chưa có hàng.
///
/// Không có cột `timestamp` riêng bên cạnh `createdAt`/`updatedAt`: dưới ngữ nghĩa upsert, hai
/// mốc có người đọc là "ghi lần đầu" (`createdAt`) và **"lần GHI gần nhất"** (`updatedAt`). Cột
/// thứ ba chỉ tạo thêm một giá trị có thể lệch với `updatedAt` mà không ai đọc.
///
/// ⚠️ `updatedAt` KHÔNG có nghĩa "lúc kết luận đổi": `@updatedAt` bump ở **mọi** lần update, kể cả
/// re-emit ghi lại **đúng giá trị cũ** — mà re-emit sau reconnect chính là **đường thường** của
/// bảng này. Ai cần "kết luận thay đổi lúc nào" phải so giá trị, không đọc cột này.
model InterviewEvidence {
  id             String         @id @default(uuid()) @db.Uuid
  sessionId      String         @map("session_id") @db.Uuid
  conceptId      String         @map("concept_id") @db.Uuid
  /// Điểm-kiểm được đo — **tham chiếu, KHÔNG FK** (chốt 13/08). Checkpoint bị XOÁ lúc phân tích
  /// lại khi câu chữ rơi khỏi lần trích mới (`analysis.service.ts`), mà `reanalyzePlan` chỉ chặn
  /// `plan.status !== 'active'` — đúng cái trạng thái của một plan đang được phỏng vấn. Không
  /// guard nào chặn phân tích lại giữa phiên, nên `Cascade` là bug trên **đường thường**: một lần
  /// phân tích lại xoá thẳng bằng chứng thật của phiên đang chạy. `Restrict` thì mọi plan từng
  /// phỏng vấn không phân tích lại được nữa (gãy #170).
  /// Nhưng lý do đứng được của non-FK là **của riêng nó**, không phải vì hai lựa chọn kia hỏng:
  /// bằng chứng là bản ghi **bất biến** điều sinh viên ĐÃ nói, không phải một mẩu phụ thuộc vòng
  /// đời của thước đo. Cùng tiền lệ với `InterviewTurn.sourceDocumentId` ngay trên.
  checkpointId   String         @map("checkpoint_id") @db.Uuid
  /// Ảnh chụp `ConceptCheckpoint.text` **tại lúc ghi** — NOT NULL (bảng mới, 0 hàng cũ, mọi lần
  /// ghi đều đang cầm text trong tay, nên không để hở nullable không có ca dùng). Giữ cho hàng mồ
  /// côi — checkpoint đã bị xoá — vẫn đọc được "sinh viên đã trả lời điều gì".
  ///
  /// Lưu **nguyên văn**, không chuẩn hoá lại lúc ghi, vì hai lý do — và **không** phải vì cần
  /// khớp từng byte: đây là **bản ghi lịch sử "thước nói gì lúc đo"**, và chuẩn hoá ở đây là dựng
  /// một pipeline chuẩn-hoá THỨ HAI có thể phân kỳ với `normalizeCheckpointText` (nguồn đã gộp
  /// khoảng trắng từ trước khi lưu, nên chỗ này không có gì để gộp thêm).
  ///
  /// ⚠️ Cửa để mở (CHƯA làm) — re-anchor phải so bằng **`checkpointKey(checkpointText)`**
  /// (chuẩn hoá + **case-fold**), KHÔNG so byte và KHÔNG dựa vào `@@unique([conceptId, text])`
  /// (ràng buộc đó chỉ nói về cách-viết-đã-lưu, không phải thứ merge đem ra so). Lý do: khoá merge
  /// thật của checkpoint là `checkpointKey` (`utils/checkpoint.ts`), và `planCheckpointMerge` gán
  /// **text mới dưới id cũ** ⇒ một checkpoint **còn sống** vẫn đổi byte khi model viết hoa/thường
  /// khác lần trước. Viết hoa-thường là **vector drift duy nhất** ở đây. So byte sẽ trượt đúng ca
  /// đó; so bằng `checkpointKey` thì khớp.
  checkpointText String         @map("checkpoint_text") @db.VarChar(300)
  status         EvidenceStatus
  /// Trích lời sinh viên, nguyên văn — cái để người chấm/kiểm tra soi lại một nhãn. `null` hợp lệ:
  /// guard chỉ bắt buộc có trích dẫn với `contradicted` (không quote thì hạ, không phạt oan).
  quote          String?
  /// Lượt đã sinh ra bằng chứng này ở đường text; `null` cho voice (không có lượt hỏi-đáp rời).
  /// Không FK cùng lý lẽ với `checkpointId` — và cũng không cần: repo không có đường xoá lượt lẻ,
  /// lượt chỉ chết theo phiên, mà bằng chứng đã cascade theo phiên rồi.
  turnRef        String?        @map("turn_ref") @db.Uuid
  createdAt      DateTime       @default(now()) @map("created_at")
  updatedAt      DateTime       @updatedAt @map("updated_at")

  // Cascade cho hai chiều SỞ HỮU thật: xoá phiên hay xoá khái niệm thì bằng chứng không còn chỗ
  // để thuộc về. Khác hẳn `checkpointId` ở trên — thước đo bị thay không có nghĩa lời sinh viên
  // đã nói bị xoá.
  session InterviewSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  concept Concept          @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // Không khai `@@index([sessionId])`: unique 3 cột ở trên đã là B-tree dẫn đầu bằng `session_id`
  // nên truy vấn lọc theo phiên dùng luôn được nó. `@@index([conceptId])` thì KHÔNG thừa —
  // `concept_id` không phải cột dẫn đầu của khoá đó.
  @@unique([sessionId, conceptId, checkpointId])
  @@index([conceptId])
  @@map("interview_evidence")
}

/// Phiên học Pomodoro (FS-01, FS-03)
model FocusSession {
  id                 String             @id @default(uuid()) @db.Uuid
  userId             String             @map("user_id") @db.Uuid
  planId             String?            @map("plan_id") @db.Uuid
  conceptIds         Json               @map("concept_ids") // string[]
  status             FocusSessionStatus @default(running)
  durationMinutes    Int                @default(0) @map("duration_minutes") // thời gian HỌC thực tế, không tính pause — cột dẫn xuất từ focusedSeconds
  focusedSeconds     Int                @default(0) @map("focused_seconds") // thời gian tập trung thực tế, do client đo và gửi lên
  awayCount          Int                @default(0) @map("away_count") // số lần rời tab (Page Visibility API)
  pomodorosCompleted Int                @default(0) @map("pomodoros_completed") // số lượt work đã hoàn thành
  strictMode         Boolean            @default(false) @map("strict_mode") // phiên này có bật chế độ nghiêm ngặt không
  startedAt          DateTime           @default(now()) @map("started_at")
  endedAt            DateTime?          @map("ended_at")

  user  User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan  StudyPlan?    @relation(fields: [planId], references: [id], onDelete: Cascade)
  notes SessionNote[]

  @@index([userId])
  @@map("focus_sessions")
}

/// Hàng đợi ôn tập do Scheduling & Remediation Engine sinh ra (AE-07, DB-04, FS-06)
model ReviewQueueItem {
  id              String           @id @default(uuid()) @db.Uuid
  planId          String           @map("plan_id") @db.Uuid
  conceptId       String           @map("concept_id") @db.Uuid
  priority        Float            @default(0)
  reason          ReviewReason
  sourceConceptId String?          @map("source_concept_id") @db.Uuid // khái niệm C đã kích hoạt traceback (không FK — chỉ tham chiếu)
  sourceSessionId String?          @map("source_session_id") @db.Uuid // audit A1: phiên Interview kích hoạt (I7.2 chống trùng, I6.5 lọc theo phiên)
  depth           Int? // 1 hoặc 2 (max_depth = 2)
  /// `@default(pending)` = **đã áp vào lịch ngay lúc chấm xong**, không phải "chờ sinh viên
  /// duyệt" (#224, 04/08/2026). `finalizeConceptResult()` cố ý không set `status` ở nhánh
  /// `create` nên hàng rơi vào default này ngay trong transaction chấm điểm; nhánh `update`
  /// cũng không đụng tới, để một lần gỡ của sinh viên không bị phiên sau ghi đè.
  /// Chỉ `PATCH /review-queue/:itemId` đổi được giá trị này, và chỉ giữa `skipped` ↔ `pending`.
  /// Xem doc của `enum ReviewItemStatus` cho nghĩa từng nhãn.
  status          ReviewItemStatus @default(pending)
  scheduledFor    DateTime?        @map("scheduled_for")
  createdAt       DateTime         @default(now()) @map("created_at")

  plan    StudyPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  concept Concept   @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // audit A1: chống trùng ReviewQueueItem theo phiên (I7.2 upsert theo cặp này)
  @@unique([sourceSessionId, conceptId])
  @@index([planId, status])
  @@map("review_queue_items")
}

/// Tài liệu gốc do sinh viên tải lên, gắn với một kế hoạch (SP-01)
/// Là "nhà" bền vững cho file_key — sống sót sau khi analysis_jobs (job tạm thời) kết thúc,
/// nên plan luôn có đường truy ngược về tệp nguồn. 1 plan : N tài liệu.
model Document {
  id        String       @id @default(uuid()) @db.Uuid
  planId    String       @map("plan_id") @db.Uuid
  filename  String       @db.VarChar(255)
  fileKey   String       @map("file_key") // khóa lưu trữ object storage (cùng khái niệm analysis_jobs.file_key)
  kind      DocumentKind @default(pdf)
  pageCount Int?         @map("page_count") // null cho tài liệu không phân trang (vd: text thuần)
  byteSize  Int?         @map("byte_size")
  createdAt DateTime     @default(now()) @map("created_at")
  /// SP-04 đổi tài liệu update hàng này tại chỗ (`plan.service.ts`): `id` giữ nguyên nhưng
  /// `filename`/`fileKey` đổi hẳn. Không có mốc thời gian này thì "tệp đã bị thay sau khi hỏi"
  /// là thứ không kiểm được, và trích dẫn cũ sẽ trỏ sang tệp mới mà vẫn trông hợp lệ.
  updatedAt DateTime     @updatedAt @map("updated_at")

  plan           StudyPlan          @relation(fields: [planId], references: [id], onDelete: Cascade)
  conceptSources ConceptSourceRef[]

  @@index([planId])
  @@map("documents")
}

/// Neo vị trí: gắn một khái niệm với đoạn tài liệu gốc mà nó được trích ra.
/// Associative entity giải quyết quan hệ N:M giữa concepts và documents.
/// (Tên model là ConceptSourceRef để tránh trùng với enum ConceptSource — provenance
/// của concept; bảng vẫn là `concept_sources`.)
/// Mở khóa: citation của AI Examiner, trích đoạn FS-04, và kiểm chứng ràng buộc C5.
/// Lưu ý: cột populate bởi extract_concepts (schema AI cần trả thêm anchor mỗi concept) —
/// vẫn là 4 lệnh gọi cố định (C4), chỉ là output phong phú hơn. Việc populate ở PR/issue sau.
model ConceptSourceRef {
  id         String   @id @default(uuid()) @db.Uuid
  conceptId  String   @map("concept_id") @db.Uuid
  documentId String   @map("document_id") @db.Uuid
  pageFrom   Int?     @map("page_from") // null nếu tài liệu không phân trang
  pageTo     Int?     @map("page_to")
  excerpt    String? // đoạn văn bản gốc — cho render FS-04 / kiểm chứng C5 mà không cần parse lại tệp
  createdAt  DateTime @default(now()) @map("created_at")

  concept  Concept  @relation(fields: [conceptId], references: [id], onDelete: Cascade)
  document Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@index([conceptId])
  @@index([documentId])
  @@map("concept_sources")
}

/// Ghi chú nhanh trong phiên học (FS-05, basic flow bước 7-8).
/// Neo vào KHÁI NIỆM chứ không chỉ vào phiên: `conceptId` bắt buộc (không nullable), để một phiên
/// nhiều khái niệm thì mỗi ghi chú vẫn biết mình thuộc khái niệm nào — đúng post-condition
/// "ghi chú được lưu trữ và liên kết đúng với concept". `body` (không phải `content` như bản phác
/// trong UC-Overview): đồng bộ với API `{ body }` và tránh trùng nghĩa với `excerpt`/`content` khác.
/// `updatedAt` cần cho đường auto-save: PATCH cùng một ghi chú nhiều lần khi người học gõ tiếp.
model SessionNote {
  id        String   @id @default(uuid()) @db.Uuid
  sessionId String   @map("session_id") @db.Uuid
  conceptId String   @map("concept_id") @db.Uuid
  body      String   @db.Text
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Cascade cả hai chiều: xóa phiên (FS-01 hủy/dọn phiên treo) hay xóa khái niệm (SP-01 phân tích
  // lại đồ thị) đều không được để lại ghi chú mồ côi trỏ vào hàng đã biến mất.
  session FocusSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  concept Concept      @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // Truy vấn chính là "mọi ghi chú của phiên này, mới nhất trước" → index theo phiên.
  @@index([sessionId])
  @@map("session_notes")
}

// ============================================
// Deferred Models (sẽ implement ở Sprint 5)
// ============================================
// - GradingFeedback: AE-10 phản hồi điểm (Sprint 5)
